--- a/react-protfolio/package.json
+++ b/react-protfolio/package.json
@@ -13,7 +13,8 @@
     "@fontsource/outfit": "^5.1.1",
     "@fontsource/roboto": "^5.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-typed": "^2.0.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "sass-embedded": "^1.83.4",
     "vite": "^6.1.0"
   }
 }
